# Orbiter-TileEdit_for_Linux

./: CMakeLists.txt  TILE.cppcheck  ZTreeMgr.cpp  ZTreeMgr.h  cmap.h  colorbar.cpp  colorbar.h  ddsread.cpp  ddsread.h  dlgElevConfig.ui  dlgElevExport.ui  dlgElevImport.ui  dlgSurfImport.ui  dlgconfig.h  dlgelevconfig.h  dlgelevexport.cpp  dlgelevexport.h  dlgelevimport.cpp  dlgelevimport.h  dlgsurfimport.cpp  dlgsurfimport.h  dxt_io.cpp  dxt_io.h  elevtile.cpp  elv_io.cpp  elv_io.h  imagetools.h  main.cpp  readme.md  tile.cpp  tile.h  tileblock.cpp  tilecanvas.cpp  tilecanvas.h  tileedit.cpp  tileedit.h  windows_compat.h
TILE-cppcheck-build-dir/: CMakeCXXCompilerId.a1  FastDXTImageProcessor.a1  FastDXTImageProcessor.s1  ZTreeMgr.a1  ZTreeMgr.s1  cmap.a1  colorbar.a1  colorbar.s1  ddsread.a1  ddsread.cpp.snalyzerinfo  dlgconfig.a1  dlgelevconfig.a1  dlgelevexport.a1  dlgelevimport.a1  dlgsurfimport.a1  dxt.a1  dxt.cpp.snalyzerinfo  dxt_io.a1  dxt_io.s1  elevtile.a1  elevtile.cpp.snalyzerinfo  elv_io.a1  elv_io.s1  files.txt  imagetools.a1  imagetools.cpp.snalyzerinfo  intrinsic.a1  intrinsic.s1  lastResults.xml  libdxt.a1  libdxt.s1  main.a1  moc_colorbar.a1  moc_dlgconfig.a1  moc_dlgelevconfig.a1  moc_dlgelevexport.a1  moc_dlgelevimport.a1  moc_dlgsurfimport.a1  moc_tilecanvas.a1  moc_tileedit.a1  (+14 more)
qt/tileedit/: CMakeLists.txt
qt/tileedit/src/: CMakeLists.txt  ZTreeMgr.cpp  ZTreeMgr.h  cmap.h  colorbar.cpp  colorbar.h  ddsread.cpp  dlgConfig.ui  dlgconfig.h  dlgelevconfig.h  dlgelevexport.cpp  dlgelevexport.h  dlgelevimport.h  dlgsurfimport.h  dxt_io.h  elevdata.h  elevtile.cpp  elevtile.h  elv_io.cpp  elv_io.h  imagetools.h  tile.cpp  tile.h  tileblock.cpp  tileblock.h  tilecanvas.cpp  tilecanvas.h  tilecommon.h  tileedit.cpp  tileedit.h  tileedit.ui  tilelog.txt  windows2linuxfunc.cpp
